# bitwrap

./: .gitignore  Cargo.toml  README.md
bitwrap_derive/: Cargo.toml
bitwrap_derive/src/: lib.rs
src/: lib.rs
tests/: array.rs  bitfield.rs  bits.rs  bits_no_std.rs  bits_skip.rs  bitwrap.rs  complex.rs  convert.rs  eq.rs  field.rs  macro.rs  max.rs  min-max.rs  min.rs  nested.rs  no_std.rs  readme.rs  readme_convert.rs  readme_nested.rs  readme_no_std.rs  readme_skip.rs  set_value.rs  skip.rs  string.rs  vec.rs
