[package]
name = "bitwrap"
version = "0.1.0"
authors = ["Cesbo Developers Team"]
description = "struct data member with explicit size, in bits"
documentation = "https://docs.rs/bitwrap"
repository = "https://github.com/cesbo/bitwrap"
edition = "2018"
keywords = ["bit", "parser", "parsing"]
license = "MIT"
readme = "README.md"

[workspace]
members = [".", "bitwrap_derive"]

[dependencies]
bitwrap_derive = { path = "./bitwrap_derive", version = "0.1.0" }
