[package]
name = "bitwrap"
version = "2.0.2"
authors = ["Cesbo Developers Team"]
categories = [
    "data-structures",
    "embedded",
    "no-std",
]
description = "pack/unpack data into byte array"
documentation = "https://docs.rs/bitwrap"
repository = "https://github.com/cesbo/bitwrap"
edition = "2018"
keywords = [
    "bit",
    "bitfield",
    "parser",
    "parsing",
]
license = "MIT"
readme = "README.md"

[features]
std = []
default = [
    "std",
]

[workspace]
members = [".", "bitwrap_derive"]

[dependencies]
bitwrap_derive = { path = "./bitwrap_derive", version = "2.0.0" }
