[package]
name = "bitwrap_derive"
version = "0.5.8"
authors = ["Cesbo Developers Team"]
description = "derive for bitwrap"
documentation = "https://docs.rs/bitwrap"
repository = "https://github.com/cesbo/bitwrap"
edition = "2018"
keywords = ["bit", "parser", "parsing"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
